--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="stamina-bar-container" style="position: absolute; bottom: 10px; left: 10px; width: 200px; height: 20px; border: 1px solid white;">
+      <div id="stamina-bar" style="width: 100%; height: 100%; background-color: green;"></div>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
