--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hugo Demont</title>
-    <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="app"></div>
-    <div id="stamina-bar-container" style="position: absolute; bottom: 10px; left: 10px; width: 200px; height: 20px; border: 1px solid white;">
-      <div id="stamina-bar" style="width: 100%; height: 100%; background-color: green;"></div>
-    </div>
-    <script type="module" src="/main.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
